--- a/requirements_apt.txt
+++ b/requirements_apt.txt
@@ -6,12 +6,13 @@ imagemagick
 gdb
 ghostscript
 git
+gnupg
 gzip
 python-is-python3
 python3
 python3-pip
 python3-venv
-tree
+tmux
 unzip
 wget
 x11-apps
